@@ -1,20 +1,22 @@
 package com.hm.picplz.domain.product.service;
 
+import java.util.List;
+import java.util.stream.IntStream;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.hm.picplz.domain.photographer.domain.Photographer;
-import com.hm.picplz.domain.photographer.exception.PhotographerNotFound;
+import com.hm.picplz.domain.photographer.exception.PhotographerErrorCode;
 import com.hm.picplz.domain.photographer.repository.PhotographerRepository;
 import com.hm.picplz.domain.product.domain.ProductPhoto;
 import com.hm.picplz.domain.product.domain.ShootProduct;
 import com.hm.picplz.domain.product.dto.ProductDto;
-import com.hm.picplz.domain.product.exception.ProductNotFound;
 import com.hm.picplz.domain.product.repository.ProductPhotoRepository;
 import com.hm.picplz.domain.product.repository.ProductRepository;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+import com.hm.picplz.global.error.ExceptionFactory;
+
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -27,23 +29,19 @@ public class ProductService {
     @Transactional
     public ProductDto.ProductId createProduct(ProductDto.Create request) {
         Photographer photographer = photographerRepository.findByMemberId(request.getPhotographerId())
-                .orElseThrow(() -> {
-                    throw PhotographerNotFound.EXCEPTION;
-                });
+            .orElseThrow(() ->  ExceptionFactory.of(PhotographerErrorCode.PHOTOGRAPHER_NOT_FOUND));
         ShootProduct product = ShootProduct.of(request, photographer);
         ShootProduct savedProduct = productRepository.save(product);
 
         IntStream.range(0, request.getProductPhotos().size())
                 .mapToObj(i -> ProductPhoto.of(request.getProductPhotos().get(i), i+1, savedProduct))
                 .forEach(productPhotoRepository::save);
-        return ProductDto.ProductId.from(savedProduct.getId());
+        return ProductDto.ProductId.of(savedProduct.getId());
     }
 
     public ProductDto.Detail findProductDetailById(Long productId) {
         ShootProduct product = productRepository.findById(productId)
-                .orElseThrow(() -> {
-                    throw ProductNotFound.EXCEPTION;
-                });
+            .orElseThrow(() ->  ExceptionFactory.of(PhotographerErrorCode.PHOTOGRAPHER_NOT_FOUND));
         List<ProductPhoto> photos = productPhotoRepository.findByShootProductIdOrderByPhotoOrderAsc(productId);
         return ProductDto.Detail.of(product, photos);
     }
@@ -55,6 +53,6 @@ public class ProductService {
                     List<ProductPhoto> photos = productPhotoRepository.findByShootProductIdOrderByPhotoOrderAsc(product.getId());
                     return ProductDto.Detail.of(product, photos);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
